--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -4,5 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.blogspot.justtonovate.bmsitscanner.ScanActivity">
+    tools:context="com.blogspot.justtonovate.bmsitscanner.ComplainActivity">
+
 </android.support.constraint.ConstraintLayout>
