--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -10,7 +10,10 @@
             android:id="@+id/navigation"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
-            app:menu="@menu/navigation_menu">
+            app:menu="@menu/navigation_menu"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            android:elevation="10sp">
 
         </android.support.design.widget.BottomNavigationView>
     </RelativeLayout>
